fix overflow on rating display

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -39,6 +39,7 @@
   .rating-display {
     font-size: 1.2rem;
     font-weight: 700;
+    text-wrap: nowrap;
   }
 
   textarea {
